# temporary_files_to_load

./: 10.txt  KKR1.py  KKR2.py  __init__.py  pandаs.py  pupupu.py  pyproject.toml  sample_submission.csv  Научная_работа.docx  Презентация.pptx  программы к задачам.docx
